message group spacing fix

--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #18191c;
-  --secondary: #121316;
-  --secondary-alt: #0d0e10;
+  --primary: #18191c; /* #111111 */
+  --secondary: #121316; /* #0a0a0a */
+  --secondary-alt: #0d0e10; /* #000000 */
 }
 
 .appMount-3lHmkl, body, .bg-h5JY_x, .app-2rEoOp {
@@ -206,6 +206,10 @@
 .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
     color: rgba(255,255,255,.6);
 }
+.divider-3_HH5L {
+    margin: 5px 0.875rem 8px 5rem;
+}
+
 
 .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:before {
     border-color: #222;
@@ -299,6 +303,7 @@
 /* chat form */
 .form-2fGMdU {
     border-top: none;
+    margin-top: 2px;
 }
 .form-2fGMdU:before {
     background:none;
@@ -1172,17 +1177,33 @@
     background-color: var(--secondary-alt);
 }
 /* message tweak for bigger avatars */
-.cozyMessage-3V1Y8y.groupStart-23k01U .container-2LR0t2 {
-    min-height: 68px;
-}
-.cozy-3raOZG .header-23xsNx {
-    padding-left: 96px;
-}
 .cozy-3raOZG.groupStart-23k01U.cozyMessage-3V1Y8y.message-2qnXI6 > .container-3FojY8.container-2LR0t2 > .clickableHeader-2Cygs8.header-23xsNx > .avatar-1BDn8e {
-    border-radius: 14%;
+    border-radius: 15%;
     width: 64px;
     height: 64px;
+    margin-right: 0px;
+    margin-left: 10px;
+}
+.container-3FojY8 {
+    overflow: unset;
+    padding: 0px 16px 0px 72px;
+}
+.timestampCozyAlt-1Hs08c {
+    left: unset;
+    right: 0px;
+}
+.cozy-3raOZG .header-23xsNx {
+    padding-left: 79px;
+    margin-left: -73px;
 }
 .container-1ov-mD, .containerCozy-336-Cz {
-    margin-left: 24px;
+    margin-left: 7px;
+}
+.group-spacing-0 .groupStart-23k01U, .group-spacing-4 .groupStart-23k01U, .group-spacing-8 .groupStart-23k01U, .group-spacing-16 .groupStart-23k01U, .group-spacing-24 .groupStart-23k01U {
+    margin-top: 48px !important;
+}
+.group-spacing-0 .hasContent-1_DUdQ, .group-spacing-4 .beforeGroup-1rH1F0, .group-spacing-4 .hasContent-1_DUdQ, .group-spacing-8 .beforeGroup-1rH1F0, .group-spacing-8 .hasContent-1_DUdQ, .group-spacing-16 .beforeGroup-1rH1F0, .group-spacing-16 .hasContent-1_DUdQ, .group-spacing-24 .beforeGroup-1rH1F0 {
+    margin-top:.5rem;
+    margin-bottom:-1px; /* 1.5rem */
+    top: 0px;
 }
